fix: text align in mobile

--- a/src/components/Post/Content/Content.module.scss
+++ b/src/components/Post/Content/Content.module.scss
@@ -55,6 +55,10 @@
       max-width: 100%;
     }
 
+    & p {
+      text-align: justify;
+    }
+
   }
 
 }
